feat: SEO оптимизация и улучшение структуры проекта
- Добавлены Open Graph изображения для социальных сетей
- Создан Service Worker для кэширования статических ресурсов
- Добавлены breadcrumbs на все страницы (кроме auth)
- Создана универсальная страница ошибок (error.html)
- Добавлены .well-known файлы (security.txt, humans.txt, robots.txt)
- Создана страница политики безопасности
- Оптимизированы HTTP заголовки для кэширования
- Улучшена структура папок (js/, icons/og/)
- Обновлены meta-теги для лучшего SEO
- Добавлены мобильные meta-теги и социальные сети
- Исправлены ошибки в breadcrumbs и навигации

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% from 'macros/breadcrumbs.html' import simple_breadcrumb %}
 
 {% block title %}Личный кабинет{% endblock %}
+
+{% block breadcrumbs %}
+{{ simple_breadcrumb("Личный кабинет") }}
+{% endblock %}
 
 {% block content %}
 <div class="container py-5">
