--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}cysu | Образовательная платформа{% endblock %}
-{% block meta_description %}cysu - современная образовательная платформа для изучения программирования и IT. Лучшая замена EIOS, Moodle, PPK. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}
-{% block meta_keywords %}иос сгту, eios sstu, eios, moodle, ppk, ппк, сгту, sstu, CYSU, образовательная платформа, программирование, обучение, лекции, практика, IT, разработка, Python, JavaScript, Java, C++, веб-разработка, базы данных, алгоритмы, СГТУ, информационные технологии, электронное обучение, дистанционное образование{% endblock %}
+{% block meta_description %}cysu - современная образовательная платформа для изучения программирования и IT. Лекции, практические задания, материалы по информационным технологиям.{% endblock %}
+{% block meta_keywords %}образовательная платформа, программирование, обучение, лекции, практика, IT, разработка, Python, JavaScript, Java, C++, веб-разработка, базы данных, алгоритмы, информационные технологии, электронное обучение, дистанционное образование, cysu{% endblock %}
 {% block content %}
 
 {% if not current_user.is_authenticated %}
@@ -430,20 +430,5 @@ function deleteSubject(subjectId) {
 }
 </script>
 
-<div style="position: absolute; left: -9999px; top: -9999px; visibility: hidden;">
-    <h1>ИОС СГТУ альтернатива</h1>
-    <h2>EIOS SSTU замена</h2>
-    <h3>CYSU вместо Moodle</h3>
-    <p>CYSU - это современная образовательная платформа, которая является лучшей альтернативой ИОС СГТУ и EIOS SSTU. Если вы ищете замену устаревшим системам электронного обучения, то CYSU - это именно то, что вам нужно.</p>
-    <p>Наша платформа превосходит EIOS, Moodle, PPK по удобству использования и функциональности. Студенты СГТУ могут использовать CYSU как полноценную замену официальной ИОС СГТУ.</p>
-    <ul>
-        <li>ИОС СГТУ альтернатива</li>
-        <li>EIOS SSTU замена</li>
-        <li>Moodle альтернатива</li>
-        <li>PPK замена</li>
-        <li>Образовательная платформа СГТУ</li>
-        <li>Электронное обучение СГТУ</li>
-    </ul>
-</div>
 
 {% endblock %} 
