--- a/app/templates/macros/breadcrumbs.html
+++ b/app/templates/macros/breadcrumbs.html
@@ -51,7 +51,7 @@
       </a>
     </li>
     <li class="breadcrumb-item">
-      <a href="{{ url_for('subjects.list') }}" class="text-decoration-none">
+      <a href="{{ url_for('main.index') }}" class="text-decoration-none">
         <i class="fas fa-book me-1"></i>Предметы
       </a>
     </li>
@@ -76,7 +76,7 @@
       </a>
     </li>
     <li class="breadcrumb-item">
-      <a href="{{ url_for('subjects.list') }}" class="text-decoration-none">
+      <a href="{{ url_for('main.index') }}" class="text-decoration-none">
         <i class="fas fa-book me-1"></i>Предметы
       </a>
     </li>
@@ -98,7 +98,7 @@
       </a>
     </li>
     <li class="breadcrumb-item">
-      <a href="{{ url_for('admin.dashboard') }}" class="text-decoration-none">
+      <a href="{{ url_for('admin.users') }}" class="text-decoration-none">
         <i class="fas fa-cog me-1"></i>Админ панель
       </a>
     </li>
