--- a/app/templates/payment/subscription.html
+++ b/app/templates/payment/subscription.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+{% from 'macros/breadcrumbs.html' import simple_breadcrumb %}
 
 {% block title %}Оформление подписки{% endblock %}
+
+{% block breadcrumbs %}
+{{ simple_breadcrumb("Оформление подписки") }}
+{% endblock %}
 
 {% block content %}
 <div class="container py-4">
