--- a/app/templates/static/privacy.html
+++ b/app/templates/static/privacy.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
+{% from 'macros/breadcrumbs.html' import simple_breadcrumb %}
 
 {% block title %}Политика конфиденциальности - cysu{% endblock %}
+
+{% block breadcrumbs %}
+{{ simple_breadcrumb("Политика конфиденциальности") }}
+{% endblock %}
 
 {% block content %}
 <div class="container py-5">
