--- a/app/templates/macros/breadcrumbs.html
+++ b/app/templates/macros/breadcrumbs.html
@@ -98,7 +98,7 @@
       </a>
     </li>
     <li class="breadcrumb-item">
-      <a href="{{ url_for('admin.users') }}" class="text-decoration-none">
+      <a href="{{ url_for('admin.admin_users') }}" class="text-decoration-none">
         <i class="fas fa-cog me-1"></i>Админ панель
       </a>
     </li>
