--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2694,8 +2694,8 @@ function markTicketNotificationRead(notificationId, managerNotificationId) {
     }
     </script>
 
-    <!-- Scroll Progress Bar -->
-    <script src="{{ url_for('static', filename='js/scroll-progress.js') }}?v=4" defer></script>
+    <!-- Scroll Indicator -->
+    <script src="{{ url_for('static', filename='js/scroll-indicator.js') }}?v=4" defer></script>
     
     <!-- Preloader -->
     <script src="{{ url_for('static', filename='js/preloader.js') }}?v=4" defer></script>
