--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -80,7 +80,6 @@
         "parentOrganization": {
             "@type": "EducationalOrganization",
             "name": "Саратовский государственный технический университет имени Гагарина Ю.А.",
-            "alternateName": ["СГТУ", "SSTU"]
         },
         "offers": {
             "@type": "Offer",
@@ -123,7 +122,7 @@
     <meta property="og:image:width" content="192">
     <meta property="og:image:height" content="192">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="CYSU - Образовательная платформа СГТУ">
+    <meta property="og:image:alt" content="cysu - Образовательная платформа ">
     
     <meta name="twitter:image" content="{{ request.url_root }}static/icons/android-chrome-192x192.png">
     <meta name="twitter:image:alt" content="cysu - Образовательная платформа">
