--- a/app/templates/subjects/subject_detail.html
+++ b/app/templates/subjects/subject_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ subject.title }} - CYSU{% endblock %}
+{% block title %}{{ subject.title }} - cysu{% endblock %}
 
 <style>
 .external-link {
@@ -15,10 +15,10 @@
   border-bottom-color: #ffffff;
 }
 </style>
-{% block meta_description %}{{ subject.title }} - {{ subject.description or 'Изучайте программирование и информационные технологии с CYSU. Современная альтернатива EIOS, Moodle, PPK для СГТУ. Лекции, практические задания и материалы.' }}{% endblock %}
-{% block meta_keywords %}{{ subject.title }}, eios, moodle, ppk, ппк, сгту, sstu, иос сгту, CYSU, программирование, обучение, лекции, практика, IT, {{ subject.title.lower() }}, образовательная платформа{% endblock %}
-{% block og_title %}{{ subject.title }} - CYSU{% endblock %}
-{% block og_description %}{{ subject.description or 'Изучайте программирование и информационные технологии с CYSU.' }}{% endblock %}
+{% block meta_description %}{{ subject.title }} - {{ subject.description or 'Изучайте программирование и информационные технологии с cysu.' }}{% endblock %}
+{% block meta_keywords %}{{ subject.title }}, eios, moodle, ppk, ппк, сгту, sstu, иос сгту, cysu, программирование, обучение, лекции, практика, IT, {{ subject.title.lower() }}, образовательная платформа{% endblock %}
+{% block og_title %}{{ subject.title }} - cysu{% endblock %}
+{% block og_description %}{{ subject.description or 'Изучайте программирование и информационные технологии с cysu.' }}{% endblock %}
 {% from 'macros/breadcrumbs.html' import subject_breadcrumb %}
 
 {% block breadcrumbs %}
